implemented reflection